--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-slick": "^0.30.2",
     "sass": "^1.77.8",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
