--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.3.2",
     "axios": "^1.7.2",
     "next": "^14.2.23",
     "react": "^18",
